--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2015",
+    "target": "es5",
     "sourceMap": true,
     "experimentalDecorators": true,
-    "lib": [ "es2015" ]
+    "lib": [ "es5", "es6", "dom"]
   },
   "exclude": [
     "node_modules"
