halfly fix kick people

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "@purest/providers": "^1.0.0",
     "@types/express": "^4.0.34",
     "bluebird": "^3.4.7",
-    "chromedriver": "^2.27.2",
+    "chromedriver": "^2.31.0",
     "cloudinary": "^1.6.0",
+    "docker": "^1.0.0",
     "express": "^4.14.0",
     "jsonfile": "^2.4.0",
     "log4ts": "^0.4.2",
